# refactoring-gilded-rose-c

./: .gitignore  CMakeLists.txt  check.sh  sonar-project.properties  sonar.sh
src/: AgedBrie.c  AgedBrie.h  BackstagePass.c  BackstagePass.h  Employee.c  Employee.h  GildedRose.c  GildedRose.h  GildedRoseTextTests.c  Item.c  Item.h  ItemType.c  ItemType.h  Person.c  Person.h  Sulfuras.c  Sulfuras.h
test/: AcceptanceTest1.cpp  AcceptanceTest1.itsLockedDown.approved.txt  AcceptanceTest3.cpp  AcceptanceTest3.itsLockedDown.approved.txt  CMakeLists.txt  GameTest.cpp  GildedRoseUnitTests.cc
